Translation update for version 1.48.0

--- a/packages/core/i18n/nls.cs.json
+++ b/packages/core/i18n/nls.cs.json
@@ -1,5 +1,9 @@
 {
   "debug.breakpoint.editCondition": "Upravit stav...",
+  "notebook.cell.insertMarkdownCellAbove": "Vložení buňky Markdown nad",
+  "notebook.cell.insertMarkdownCellBelow": "Vložení buňky Markdown níže",
+  "notebook.cell.to-code-cell": "Změna buňky na kód",
+  "notebook.cell.to-markdown-cell": "Změna buňky na Mardown",
   "terminal:new:profile": "Vytvoření nového integrovaného terminálu z profilu",
   "terminal:profile:default": "Zvolte výchozí profil terminálu",
   "theia": {
