--- a/packages/core/i18n/nls.ja.json
+++ b/packages/core/i18n/nls.ja.json
@@ -1,5 +1,9 @@
 {
   "debug.breakpoint.editCondition": "編集条件...",
+  "notebook.cell.insertMarkdownCellAbove": "マークダウン・セルを上に挿入する",
+  "notebook.cell.insertMarkdownCellBelow": "下にマークダウン・セルを挿入する",
+  "notebook.cell.to-code-cell": "セルをコードに変更",
+  "notebook.cell.to-markdown-cell": "セルをマーダウンに変更",
   "terminal:new:profile": "プロファイルから新しい統合端末を作成する",
   "terminal:profile:default": "デフォルトの端末プロファイルを選択",
   "theia": {
