--- a/packages/core/i18n/nls.pt-br.json
+++ b/packages/core/i18n/nls.pt-br.json
@@ -1,5 +1,9 @@
 {
   "debug.breakpoint.editCondition": "Editar condição...",
+  "notebook.cell.insertMarkdownCellAbove": "Inserir célula Markdown acima",
+  "notebook.cell.insertMarkdownCellBelow": "Inserir célula Markdown abaixo",
+  "notebook.cell.to-code-cell": "Alterar célula para código",
+  "notebook.cell.to-markdown-cell": "Mudança de célula para Mardown",
   "terminal:new:profile": "Criar um novo terminal integrado a partir de um perfil",
   "terminal:profile:default": "Escolha o Perfil do Terminal padrão",
   "theia": {
