--- a/packages/core/i18n/nls.de.json
+++ b/packages/core/i18n/nls.de.json
@@ -1,9 +1,9 @@
 {
   "debug.breakpoint.editCondition": "Edit Bedingung...",
+  "notebook.cell.changeToCode": "Zelle in Code ändern",
+  "notebook.cell.changeToMarkdown": "Zelle in Mardown ändern",
   "notebook.cell.insertMarkdownCellAbove": "Markdown-Zelle oben einfügen",
   "notebook.cell.insertMarkdownCellBelow": "Markdown-Zelle unten einfügen",
-  "notebook.cell.to-code-cell": "Zelle in Code ändern",
-  "notebook.cell.to-markdown-cell": "Zelle in Mardown ändern",
   "terminal:new:profile": "Neues integriertes Terminal aus einem Profil erstellen",
   "terminal:profile:default": "Wählen Sie das Standard-Terminalprofil",
   "theia": {
@@ -410,6 +410,9 @@
       "config.untrackedChanges.hidden": "versteckt",
       "config.untrackedChanges.mixed": "gemischt",
       "config.untrackedChanges.separate": "getrennt",
+      "dirtyDiff": {
+        "close": "Schließen Ändern Peek-Ansicht"
+      },
       "history": "Geschichte",
       "noRepositoryFound": "Kein Repository gefunden",
       "unamend": "Ändern",
