--- a/packages/core/i18n/nls.it.json
+++ b/packages/core/i18n/nls.it.json
@@ -1,9 +1,9 @@
 {
   "debug.breakpoint.editCondition": "Modifica della condizione...",
+  "notebook.cell.changeToCode": "Cambia cella in codice",
+  "notebook.cell.changeToMarkdown": "Cambiare la cella in Mardown",
   "notebook.cell.insertMarkdownCellAbove": "Inserire la cella Markdown sopra",
   "notebook.cell.insertMarkdownCellBelow": "Inserire la cella Markdown in basso",
-  "notebook.cell.to-code-cell": "Cambia cella in codice",
-  "notebook.cell.to-markdown-cell": "Cambiare la cella in Mardown",
   "terminal:new:profile": "Creare un nuovo terminale integrato da un profilo",
   "terminal:profile:default": "Scegliere il profilo del terminale predefinito",
   "theia": {
@@ -410,6 +410,9 @@
       "config.untrackedChanges.hidden": "nascosto",
       "config.untrackedChanges.mixed": "misto",
       "config.untrackedChanges.separate": "separato",
+      "dirtyDiff": {
+        "close": "Chiudi Cambia vista Peek"
+      },
       "history": "Storia",
       "noRepositoryFound": "Nessun repository trovato",
       "unamend": "Unamend",
