added basics for drag image renderers and improved basic drag image slightly
Signed-off-by: Jonah Iden <jonah.iden@typefox.io>

--- a/packages/core/i18n/nls.json
+++ b/packages/core/i18n/nls.json
@@ -341,6 +341,12 @@
       "reveal": "Reveal in Explorer",
       "toggleHiddenFiles": "Toggle Hidden Files"
     },
+    "notebook": {
+      "dragGhostImage": {
+        "markdownText": "Mardown Cell Selected",
+        "codeText": "Code Cell Selected"
+      }
+    },
     "output": {
       "clearOutputChannel": "Clear Output Channel...",
       "closeOutputChannel": "Close Output Channel...",
