--- a/packages/core/i18n/nls.ru.json
+++ b/packages/core/i18n/nls.ru.json
@@ -393,6 +393,10 @@
       "webviewTrace": "Управляет трассировкой связи с веб-вью.",
       "webviewWarnIfUnsecure": "Предупреждает пользователей о том, что веб-просмотры в настоящее время развернуты небезопасно."
     },
+    "preferences": {
+      "hostedPlugin": "Хостируемый плагин",
+      "toolbar": "Панель инструментов"
+    },
     "preview": {
       "openByDefault": "По умолчанию вместо редактора открывается предварительный просмотр."
     },
