--- a/packages/core/i18n/nls.ru.json
+++ b/packages/core/i18n/nls.ru.json
@@ -362,6 +362,9 @@
       "alreadyRunning": "Хостируемый экземпляр уже запущен.",
       "debugInstance": "Отладочный экземпляр",
       "debugMode": "Использование inspect или inspect-brk для отладки Node.js",
+      "debugPorts": {
+        "debugPort": "Порт, используемый для отладки Node.js на этом сервере"
+      },
       "devHost": "Ведущий разработки",
       "failed": "Не удалось запустить размещенный экземпляр плагина: {0}",
       "hostedPlugin": "Хостируемый плагин",
