Translation update for version 1.53.0

--- a/packages/core/i18n/nls.cs.json
+++ b/packages/core/i18n/nls.cs.json
@@ -11,6 +11,7 @@
       "noCallers": "Nebyl zjištěn žádný volající.",
       "open": "Hierarchie otevřených výzev"
     },
+    "collaboration": {},
     "core": {
       "about": {
         "compatibility": "{0} Kompatibilita",
