--- a/packages/core/i18n/nls.pl.json
+++ b/packages/core/i18n/nls.pl.json
@@ -11,6 +11,7 @@
       "noCallers": "Nie wykryto żadnych rozmówców.",
       "open": "Hierarchia zaproszeń otwartych"
     },
+    "collaboration": {},
     "core": {
       "about": {
         "compatibility": "{0} Zgodność",
