--- a/packages/core/i18n/nls.pt-br.json
+++ b/packages/core/i18n/nls.pt-br.json
@@ -11,6 +11,7 @@
       "noCallers": "Nenhum chamador foi detectado.",
       "open": "Hierarquia de Chamadas Abertas"
     },
+    "collaboration": {},
     "core": {
       "about": {
         "compatibility": "{0} Compatibilidade",
