--- a/packages/core/i18n/nls.tr.json
+++ b/packages/core/i18n/nls.tr.json
@@ -11,6 +11,7 @@
       "noCallers": "Herhangi bir arayan tespit edilmedi.",
       "open": "Açık Çağrı Hiyerarşisi"
     },
+    "collaboration": {},
     "core": {
       "about": {
         "compatibility": "{0} Uyumluluk",
