--- a/packages/core/i18n/nls.fr.json
+++ b/packages/core/i18n/nls.fr.json
@@ -11,6 +11,7 @@
       "noCallers": "Aucun appelant n'a été détecté.",
       "open": "Hiérarchie des appels ouverts"
     },
+    "collaboration": {},
     "core": {
       "about": {
         "compatibility": "{0} Compatibilité",
